0.3.17 -- 2015-01-31
	Wertpapieraktualisierungen erfolgen im Hintergrund
	Diverse Bugfixes

0.3.16 -- 2015-01-26
	Bestands-Import für Offline-Deports
	Verbesserter CSV-Import
	
0.3.15 -- 2015-01-25
	Umsatz-Import um Ein- und Ausbuchungen ergänzt

0.3.14 -- 2015-01-19
	Umsatz-Import: Vorläufig werden nur Käufe und Verkäufe übernommen

0.3.13 -- 2015-01-19
	Verbesserter CSV Import
	Editieren von Wertpapieren (closes #23)

0.3.12 -- 2015-01-15
	Bugfixes in Verbindung mit dem Hinzufügen von Umsätzen

0.3.11 -- 2015-01-09
	Properties für Consors anpassen (closes #35)
	
0.3.10 -- 2015-01-09
	Properties für Consors anpassen (closes #35)
	Kennzahlen von Wertpapieren vergleichen (closes #12)
	Performance von Wertpapieren auf Jahresbasis (close #32)
	Import von Kursdaten via CSV-Datei möglich
	Steuern und Transaktionskosten können bei den Umsätzen verwaltet werden (closes #29)
	
0.3.9 -- 2015-01-01
	Aktualisierungen: Speicherung der Einstellungen (close #17)
	Spalte Kursdatum wird aktualisiert (close #25)
	Mehrere Wertpapiere aktualisieren (close #16)

0.3.8 -- 2014-12-31
	Verbesserte Wertpapiersuche durch Nutzung der 'Gesamtliste aller auf Xetra handelbaren Wertpapiere' (fixes #21)
	Einrichtungsassistent: Sonderfall Consorsbank

v0.3.7
	Saldo für Offline-Depots (close #15)
	Graphische Bestandsanzeige war falsch (Fixes #20)
	Teilweise keine Aktualisierung der Bestandsübersicht bei Offline-Konten (fixes #24)

v0.3.6
	Einrichtungsassistenten (close #14)
	Umsätze/Order können nun auch in eine leere Liste eingefügt werden
	Wertpapiere lassen sich nun auch hinzufügen, wenn die Liste noch leer ist
	Bestand/Graphisch wurde nicht richtig aktualisiert
	Offline-Depots: Bestand berechnen, wenn Aktienkurse aktualisiert wurden

v0.3.5

v0.3.4

v0.3.3
