@@ -1,3 +1,6 @@
+	Performance-Verbesserung im Zusammenhang mit Mysql (fixes #41)
+	Import Umsätzen: Bessere Rückmeldung bei unbekannten Aktionen 
+
 0.3.17 -- 2015-01-31
 	Wertpapieraktualisierungen erfolgen im Hintergrund
 	Diverse Bugfixes
